[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-os"
version = "0.1.0"
description = "Secure facility inventory simulator built for the Vault OS Day 17 spec."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["vault", "inventory", "cli", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
vault = "vault.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-ra"
